# towboat

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  boat.toml
.claude/: settings.local.json
docs/src/: lib.md  main.md
examples/: basic-usage.md
src/: error.rs  lib.rs  main.rs
src/commands/: diff.rs  init.rs  mod.rs  status.rs  sync.rs
src/config/: manifest.rs  mod.rs  package.rs
src/deploy/: lock.rs  mod.rs  symlink.rs
src/discovery/: walker.rs
src/resolve/: mod.rs  resolver.rs
src/tags/: matcher.rs  mod.rs  parser.rs
src/template/: engine.rs
tests/: integration_tests.rs  proptest_tests.rs  test_fixtures.rs
tests/fixtures/: bashrc_linux.txt  bashrc_macos.txt  config_with_tags.toml  gitconfig_with_tags.txt  nvim_linux.vim  nvim_macos.vim  ssh_config_with_tags.txt
